samples/_failures_safe/1761406089_11bd2e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_82ef3e95.c: In function ‘main’:
./samples/SAFE/__tmp_82ef3e95.c:157:5: error: expected declaration or statement at end of input
  157 |     printf("Matrix Operations Program\n");
      |     ^~~~~~
